Fix homepage header alignment

--- a/assets/style.css
+++ b/assets/style.css
@@ -34,9 +34,12 @@ footer {
 header h1 {
   width: 40rem;
   max-width: 100vw;
-  margin: auto;
   padding: .5rem;
 }
+body:not(.home) header h1 {
+  margin: auto;
+}
+
 header p {
   font-size: 1.2em;
 }
